# legaldata

./: .gitignore  README.md  data_list.md  pyproject.toml  requirements.txt  setup.py
demo/: dir.ipynb  egov.ipynb  fsa.ipynb  jpx.ipynb  jsda.ipynb  sesc.ipynb
demo/data/dir/: metadata.json
demo/data/egov/: content.xml  metadata.json
demo/data/fsa_news/: content.html  metadata.json
demo/data/fsa_public_comments/: metadata.json
demo/data/jpx_public_comments/: metadata.json
demo/data/jpx_rules/: content.html  metadata.json
demo/data/jsda/: metadata.json
demo/data/jsdahandbook/: metadata.json
demo/data/sesc_houdou/: content.html  metadata.json
demo/data/sesc_jirei/: metadata.json
docs/: data_list.md
docs/source/: dir.md  egov.md  fsa.md  jpx.md  jsda.md  sesc.md
legaldata/formatter/: __init__.py  html.py  url.py
legaldata/loader/: __init__.py  base.py  dir.py  egov.py  fsa.py  jpx.py  jsda.py  sesc.py
